# simple-kanban

./: .gitignore  LICENSE  README.md  docker-compose.yml
.cursor/rules/: docs-context.mdc
.github/workflows/: backend-cd.yml  backend-ci.yml  frontend-ci.yml  mcp-cd.yml  mcp-ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml
backend/kanban_api/: config.py  database.py  dependencies.py  main.py
backend/kanban_api/routes/: board.py  user.py
backend/kanban_api/schemas/: base.py  card.py  user.py
backend/kanban_api/utils/: __init__.py  attr.py
backend/src/kanban_api/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  utils.py
backend/src/kanban_api/routes/: auth.py  board.py  card.py  user.py
backend/src/kanban_api/schemas/: base.py  board.py  card.py  label.py  token.py  user.py
backend/src/kanban_api/utils/: __init__.py  attr.py  fake_data.py  sample.md  token.py
backend/tests/: __init__.py  conftest.py  test_main.py
backend/tests/routes/: test_auth.py  test_board.py  test_card.py  test_user.py  user.py
backend/tests/utils/: test_auth.py  test_password.py
docs/: backend.md  frontend.md  index.md  mcp.md
frontend/: package-lock.json  package.json
frontend/src/api-client/: runtime.ts
frontend/src/api-client/.openapi-generator/: FILES
frontend/src/api-client/apis/: AuthApi.ts  BoardsApi.ts  CardsApi.ts  UsersApi.ts  index.ts
frontend/src/api-client/models/: BoardInCreate.ts  BoardInUpdate.ts  BoardOut.ts  CardColumn.ts  CardInCreate.ts  CardInUpdate.ts  CardOut.ts  HTTPValidationError.ts  LabelColor.ts  LabelInCreate.ts  LabelInUpdate.ts  LabelOut.ts  Token.ts  UserInCreate.ts  UserInSearch.ts  UserInUpdate.ts  UserOut.ts  UserOutPublic.ts  ValidationError.ts  ValidationErrorLocInner.ts  index.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/basic/: layout.tsx  page.tsx
frontend/src/app/basic/board/[board_id]/: layout.tsx  page.tsx
frontend/src/app/basic/boards/: page.tsx
frontend/src/app/basic/boards/_components/: add-board.tsx  board.tsx  dialog.tsx
frontend/src/app/board/: page.tsx
frontend/src/app/board/[board_id]/: layout.tsx  page.tsx
frontend/src/app/board/[board_id]/_components/: board.tsx  card.tsx
frontend/src/app/board/_components/: board.tsx  card.tsx  header.tsx  interfaces.tsx
frontend/src/app/boards/: page.tsx
frontend/src/app/boards/_components/: add-board.tsx  board.tsx  dialog.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/me/: layout.tsx  page.tsx
frontend/src/app/me/_components/: account-form.tsx  dashboard.tsx
frontend/src/app/signup/: page.tsx
frontend/src/auth/: utils.tsx
frontend/src/components/: app-sidebar.tsx  login-form.tsx  markdown.tsx  signup-form.tsx
frontend/src/hooks/: use-auth-client.tsx
mcp/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
mcp-server/: .env.example  .gitignore  noxfile.py  pyproject.toml  server.py
mcp-server/client/: README.md  pyproject.toml
mcp-server/client/simple_kanban_api_client/: __init__.py
mcp-server/client/simple_kanban_api_client/api/auth/: login_api_auth_tokens_post.py
mcp-server/client/simple_kanban_api_client/api/boards/: create_board_api_boards_post.py  create_cards_api_boards_board_id_cards_post.py  delete_board_api_boards_board_id_delete.py  get_board_api_boards_board_id_get.py  list_boards_api_boards_get.py  list_cards_api_boards_board_id_cards_get.py  list_users_api_boards_board_id_users_get.py  share_board_api_boards_board_id_users_user_id_put.py  unshare_board_api_boards_board_id_users_user_id_delete.py  update_board_api_boards_board_id_patch.py
mcp-server/client/simple_kanban_api_client/api/cards/: delete_card_api_cards_card_id_delete.py  get_card_api_cards_card_id_get.py  update_card_api_cards_card_id_patch.py
mcp-server/client/simple_kanban_api_client/api/users/: create_user_api_users_post.py  get_me_api_users_me_get.py  search_user_api_users_search_post.py  update_user_api_users_me_patch.py
mcp-server/client/simple_kanban_api_client/models/: __init__.py  board_in_create.py  board_in_update.py  board_out.py  body_login_api_auth_tokens_post.py  card_column.py  card_in_create.py  card_in_update.py  card_out.py  label_color.py  label_in_create.py  label_in_update.py  label_out.py  user_in_create.py  user_in_search.py  user_in_update.py  user_out.py  user_out_public.py
mcp-server/mcp_server/: config.py  schemas.py  server.py
mcp-server/tests/: conftest.py  test_server.py
mcp/src/: config.py  server.py
mcp/src/client/models/: BoardInCreate.py  BoardInUpdate.py  BoardOut.py  Body_login_api_auth_tokens_post.py  Body_login_auth_tokens_post.py  CardColumn.py  CardInCreate.py  CardInUpdate.py  CardOut.py  LabelColor.py  LabelInCreate.py  LabelInUpdate.py  LabelOut.py  Token.py  UserInCreate.py  UserInSearch.py  UserInUpdate.py  UserOut.py  UserOutPublic.py  __init__.py
mcp/src/client/services/: async_auth_service.py  async_boards_service.py  async_cards_service.py  async_users_service.py  auth_service.py  boards_service.py  cards_service.py  users_service.py
scripts/: openapi_transform.py
(+14 files in other folders)
