[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = ["Mateo Velez <mateo.velezcobian@gmail.com>"]
readme = "README.md"
packages = [{include = "mcp_server"}]

[tool.poetry.dependencies]
python = "^3.11"
simple-kanban-api-client = {path = "client"}
pydantic-settings = "^2.7.1"
fastmcp = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
ruff = "^0.9.5"
pytest-asyncio = "^0.25.3"
faker = "^35.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
