[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "A simple MCP client"
authors = [
    { name = "Mateo Velez", email = "mateo.velez@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic-settings",
    "mcp"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]